# Python_Learning

./: .env  VOICE_TO_TEXT_COMPARISON.md  main.py  pyproject.toml
1_foundations/: 1_lab1.py
deepgram/: main.py
gemini/: main.py  main1.py
google_speech_to_text/: main.py
groq/: main.py  polish_service.py
test_files/: test.md
