[project]
name = "python-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepgram-sdk>=7.4.0",
    "fastapi>=0.138.2",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]
